Add missing career skills